--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
     depends_on:
       - migrate
       - redis
-      - db
+      - database
       - rabbitmq
     networks:
       - backend
+      - rabbitmq_go_net
 
   redis:
     image: redis:6.2-alpine
@@ -23,30 +24,38 @@ services:
       - redis:/data
     networks:
       - backend
-  
-  migrate:
-    command: ['sh', '/scripts/start.sh']
-    volumes:
-      - ./scripts:/scripts
-    depends_on:
-      - db
-    networks:
-      - backend
 
-  db:
-    image: postgres:14.1-alpine
+  database:
+    image: postgres:latest
     restart: unless-stopped
+    volumes:
+      - ./db/sql:/docker-entrypoint-initdb.d/
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=relationer
     networks:
       - backend
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+        - 15672:15672
+    volumes:
+        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+        - rabbitmq_go_net
+  
 
 volumes:
   redis:
     driver: local
-  db:
+  database:
     driver: local
 
 networks:
+  rabbitmq_go_net:
+    driver: bridge
   backend:
